fixed spacing

--- a/CSS.css
+++ b/CSS.css
@@ -36,6 +36,7 @@ h2 {
 	border-bottom: 1px solid #1167a0;
 	padding-bottom: 15px;
 	margin-bottom: 20px;
+	text-align: center; 
 }
 
 ul{
